add SwingExperimentWithTest